Move away from the inefficient 1.4 operations.
git-svn-id: https://svn.apache.org/repos/asf/lenya/branches/BRANCH_2_1_X@907377 13f79535-47bb-0310-9956-ffa450edef68