@@ -64,8 +64,8 @@ public class Password {
         for (int i = 0; i < buf.length; i++) {
             int h = (buf[i] & 0xf0) >> 4;
             int l = (buf[i] & 0x0f);
-            sb.append(new Character((char) ((h > 9) ? (('a' + h) - 10) : ('0' + h))));
-            sb.append(new Character((char) ((l > 9) ? (('a' + l) - 10) : ('0' + l))));
+            sb.append(Character.valueOf((char) ((h > 9) ? (('a' + h) - 10) : ('0' + h))));
+            sb.append(Character.valueOf((char) ((l > 9) ? (('a' + l) - 10) : ('0' + l))));
         }
 
         return sb.toString();
